Fix small layout issue (#105)

--- a/packages/verification-vue-component/src/style/components/verification/_item_list.scss
+++ b/packages/verification-vue-component/src/style/components/verification/_item_list.scss
@@ -31,6 +31,8 @@
 
                     h4 {
                         margin-bottom: 0.25em;
+                        font-size: $font-size-normal;
+                        line-height: $line-height;
                     }
 
                     p {
